<resources>
    <string name="app_name">Test Localization</string>
    <string name="title">Sweet Rice Porridge</string>
    <string name="prep_time">10 mins</string>
    <string name="total_time">15 mins</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="ingredients">1 cup cooked rice; 1 1/4 cups whole milk; 2 Medjool dates, pitted and coarsely chopped; Pinch cinnamon; Kosher salt; Berries, chopped apple, toasted sliced almonds, and honey, for serving</string>
    <string name="directions_title">Directions</string>
    <string name="directions">In a saucepan, combine rice, milk, dates, cinnamon, and a pinch of kosher salt. Bring to a boil, then reduce heat and simmer, stirring, until thick and creamy, 5 to 7 minutes. Serve, topped with berries, apple, almonds, and a drizzle of honey.</string>
</resources>